<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">Passdroid</string>
<string name="categories">Categories</string>
<string name="passwords">Passwords</string>

<string name="add_title">Add Password</string>
<string name="show_title">Show</string>
<string name="edit_title">Edit Password</string>

<string name="logo_description">Passdroid logo</string>

<!-- About -->
<string name="about_title">About Passdroid</string>
<string name="about_text">\
Passdroid is an open source application that lets you store your passwords in a secure way on your \
Android device. The application use AES and SHA-256 to store the passwords on the device \
to prevent access without the master password.\n\
\n\
http://passdroid.kodholken.com/\n\
\n\
Copyright &#169; 2009-2012  Magnus Eriksson &lt;eriksson.mag@gmail.com&gt;. All rights reserved.\n\
\n\
Application icon by VisualPharm (http://www.visualpharm.com/).\n\
\n\
This program is free software: you can redistribute it and/or modify \
it under the terms of the GNU General Public License as published by \
the Free Software Foundation, either version 3 of the License, or \
(at your option) any later version.\n\
\n\
This program is distributed in the hope that it will be useful, \
but WITHOUT ANY WARRANTY; without even the implied warranty of \
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the \
GNU General Public License for more details.\n\
\n\
You should have received a copy of the GNU General Public License \
along with this program.  If not, see &lt;http://www.gnu.org/licenses/&gt;.\
</string>

<!-- Login -->
<string name="login_title">Login</string>
<string name="login_button_text">Login</string>
<string name="login_text">Enter your master password</string>
<string name="login_failure_title">Failure</string>
<string name="login_failure">The supplied password was incorrect.</string>

<!-- Initialize  -->
<string name="initialize_title">Initialize</string>
<string name="initialize_welcome">Welcome to Passdroid!</string>
<string name="initialize_text">Before continuing you need to choose a master password \
that will protect the information that is stored on the device. If this password is forgotten \
the passwords stored are not recoverable.</string>
<string name="enter_password">Enter the password you want to use:</string>
<string name="repeat_password">Enter the password again:</string>
<string name="initialize_mismatch_title">Mismatch</string>
<string name="initialize_mismatch_text">"The passwords you entered did not match. Please try again."</string>

<!-- Change master password -->
<string name="change_password_title">Change master password</string>
<string name="old_password">Enter your current password</string>
<string name="new_password">Enter your new password twice</string>

<!-- Options -->
<string name="options_add">Add Password</string>
<string name="options_search">Search</string>
<string name="options_settings">Settings</string>
<string name="options_about">About</string>
<string name="options_logout">Logout</string>
<string name="options_edit">Edit</string>
<string name="options_delete">Delete</string>
<string name="options_impexp">Import / Export</string>
<string name="options_generate_password">Password Generator</string>

<string name="add_password_text">Add Password</string>
<string name="empty_list_help">Press the menu button and choose <b>Add Password</b> to create new password entries.</string>

<string name="settings_title">Settings</string>

<string name="import_export_title">Import / Export</string>
<string name="file_export_title">Export to file</string>
<string name="file_import_title">Import from file</string>
<string name="encrypt_export">Encrypt the exported file</string>
<string name="export_successful">Database successfully exported to %s</string>
<string name="export_cleartext_successful">Database successfully exported to %s. Note that the passwords are NOT ENCRYPTED.</string>

<string name="export_description">\
This will export the password database to a file on your phone or SD card. \
In combination with the import function this can be used to move the \
password database between Passdroid devices or as a way to back up your data. \
If you export the file unencrypted make sure it is \
removed from the phone as quickly as possible since other applications will \
be able to read it.</string>

<string name="import_description">\
This will import a database of passwords that has been exported from Passdroid. \
The import will remove any existing passwords on this device.</string>

<string name="import_description_file_present" formatted="false">%f contains %n entries.</string>

<string name="import_description_encrypted_file_present" formatted="false">\
The file %s is encrypted.</string>

<string name="import_description_file_missing">\
Import not available. To enable it transfer your exported password file to the device\'s external storage. Make sure that the file is named passdroid_db.xml.</string>

<string name="import_description_failure" formatted="false">Failed to read %f: %e.</string>

<!-- Generate password dialog -->
<string name="generate_password_title">Generate password</string>
<string name="generate_password">Generate password</string>
<string name="character_set">Character set</string>
<string name="length">Length</string>
<string name="strength">Strength</string>
<string name="generate">Generate</string>

<!-- Import passwords dialog -->
<string name="import_password_title">Import password</string>
<string name="import_password_desc">The file could not be decrypted using the current master password. Please enter the master password that was in use when you exported the password database.</string>
<string name="import_failed">Import failed.</string>
<string name="select_import_file">Select import file</string>
<string name="import_searching">Searching for files\u2026</string>

<!-- Generics -->
<string name="yes">Yes</string>
<string name="no">No</string>
<string name="ok">OK</string>
<string name="success">Success</string>
<string name="failure">Failure</string>
<string name="continue_s">Continue</string>
<string name="password">Password</string>
<string name="system">System</string>
<string name="username">Username</string>
<string name="note">Note</string>
<string name="url">URL</string>
<string name="save">Save</string>
<string name="filename">Filename</string>
<string name="cancel">Cancel</string>
<string name="export">Export</string>

</resources>
