<?xml version="1.0" encoding="utf-8"?> 
<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20sp">
    
    <TextView
      android:text="@string/system"
      android:textSize="13sp"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"/>
          
    <EditText
      android:id="@+id/system"
      android:singleLine="true"
      android:inputType="textCapSentences"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"/>

    <TextView
      android:paddingTop="10dip"
      android:text="@string/username"
      android:textSize="13sp"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"/>
         
    <EditText
      android:id="@+id/username"
      android:singleLine="true"
      android:inputType="textVisiblePassword"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"/>

    <TextView
      android:paddingTop="10dip"
      android:text="@string/password"
      android:textSize="13sp"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"/>
    
    <EditText
      android:id="@+id/password"
      android:singleLine="true"
      android:inputType="textVisiblePassword"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"/>
 
    <Button
      android:id="@+id/generate_button"
      android:text="@string/generate_password"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:textSize="13sp"/>

    <TextView
      android:paddingTop="10dip"
      android:text="@string/note"
      android:textSize="13sp"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"/>
    
    <EditText
      android:id="@+id/note"
      android:inputType="textCapSentences"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"/>
    
    <TextView
      android:paddingTop="10dip"
      android:text="@string/url"
      android:textSize="13sp"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"/>
    
    <EditText
      android:id="@+id/url"
      android:singleLine="true"
      android:inputType="textUri"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"/>
    
    <Button
      android:id="@+id/save_button"
      android:layout_marginTop="10dip"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/save"
      android:textSize="13sp"/>
  </LinearLayout>
</ScrollView>
